trying to fix the header overflow issue

--- a/top_page.css
+++ b/top_page.css
@@ -30,6 +30,7 @@ The first bar on the page.
 }
 
 #nav_bar {
+	margin-top: 10px;
 	overflow:auto;
 	clear:both;
     display:block;
